tests/ui/imports/ambiguous-14.stderr
error[E0659]: `foo` is ambiguous
  --> $DIR/ambiguous-14.rs:23:8
   |
LL |     g::foo();
   |        ^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `foo` could refer to the function imported here
  --> $DIR/ambiguous-14.rs:13:13
   |
LL |     pub use a::*;
   |             ^^^^
   = help: consider adding an explicit import of `foo` to disambiguate
note: `foo` could also refer to the function imported here
  --> $DIR/ambiguous-14.rs:14:13
   |
LL |     pub use b::*;
   |             ^^^^
   = help: consider adding an explicit import of `foo` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
